# mikrotik-router-configuration

./: .gitignore  .pre-commit-config.yaml  README.md  build.ninja  example.py  go.mod  go.sum  main.go  pyproject.toml  shell.nix
configuration/: README.md  baseline.rsc  firewall-ipv4.rsc  firewall-ipv6.rsc  ipv6.rsc
